--- a/template/index.html
+++ b/template/index.html
@@ -2,17 +2,16 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <meta
-      name="viewport"
-      content="width=device-width, initial-scale=1, shrink-to-fit=no"
-    />
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
 
     <title>Music Template</title>
 
     <!-- CSS -->
     <script src="https://cdn.tailwindcss.com"></script>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
-      href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700"
+      href="https://fonts.googleapis.com/css2?family=DM+Mono:ital@0;1&family=Lora:wght@700&family=Raleway:ital@0;1&display=swap"
       rel="stylesheet"
     />
     <link
@@ -24,14 +23,12 @@
     <link href="assets/css/main.css" rel="stylesheet" />
   </head>
 
-  <body class="bg-gray-100 font-sans pb-24">
+  <body class="bg-gray-100 font-lora pb-24">
     <!-- Header -->
     <header id="header" class="bg-gray-700">
       <nav class="container mx-auto flex justify-start items-center py-5 px-4">
         <!-- App Name -->
-        <a class="text-white font-bold uppercase text-2xl mr-4" href="#"
-          >Music</a
-        >
+        <a class="text-white font-bold uppercase text-2xl mr-4" href="#">Music</a>
 
         <div class="flex flex-grow items-center">
           <!-- Primary Navigation -->
@@ -58,10 +55,9 @@
         <div class="text-white main-header-content">
           <h1 class="font-bold text-5xl mb-5">Listen to Great Music!</h1>
           <p class="w-full md:w-8/12 mx-auto">
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus
-            et dolor mollis, congue augue non, venenatis elit. Nunc justo eros,
-            suscipit ac aliquet imperdiet, venenatis et sapien. Duis sed magna
-            pulvinar, fringilla lorem eget, ullamcorper urna.
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus et dolor mollis,
+            congue augue non, venenatis elit. Nunc justo eros, suscipit ac aliquet imperdiet,
+            venenatis et sapien. Duis sed magna pulvinar, fringilla lorem eget, ullamcorper urna.
           </p>
         </div>
       </div>
@@ -74,15 +70,11 @@
 
     <!-- Main Content -->
     <section class="container mx-auto">
-      <div
-        class="bg-white rounded border border-gray-200 relative flex flex-col"
-      >
+      <div class="bg-white rounded border border-gray-200 relative flex flex-col">
         <div class="px-6 pt-6 pb-5 font-bold border-b border-gray-200">
           <span class="card-title">Songs</span>
           <!-- Icon -->
-          <i
-            class="fa fa-headphones-alt float-right text-green-400 text-xl"
-          ></i>
+          <i class="fa fa-headphones-alt float-right text-green-400 text-xl"></i>
         </div>
         <!-- Playlist -->
         <ol id="playlist">
@@ -303,10 +295,7 @@
         <!-- Scrub Container  -->
         <div class="w-full h-2 rounded bg-gray-200 relative cursor-pointer">
           <!-- Player Ball -->
-          <span
-            class="absolute -top-2.5 -ml-2.5 text-gray-800 text-lg"
-            style="left: 50%"
-          >
+          <span class="absolute -top-2.5 -ml-2.5 text-gray-800 text-lg" style="left: 50%">
             <i class="fas fa-circle"></i>
           </span>
           <!-- Player Progress Bar-->
@@ -330,9 +319,7 @@
         </div>
 
         <!-- This element is to trick the browser into centering the modal contents. -->
-        <span class="hidden sm:inline-block sm:align-middle sm:h-screen"
-          >&#8203;</span
-        >
+        <span class="hidden sm:inline-block sm:align-middle sm:h-screen">&#8203;</span>
 
         <div
           class="inline-block align-bottom bg-white rounded-lg text-left overflow-hidden shadow-xl transform transition-all sm:my-8 sm:align-middle sm:max-w-lg sm:w-full"
@@ -358,9 +345,7 @@
                 >
               </li>
               <li class="flex-auto text-center">
-                <a class="block rounded py-3 px-4 transition" href="#"
-                  >Register</a
-                >
+                <a class="block rounded py-3 px-4 transition" href="#">Register</a>
               </li>
             </ul>
 
@@ -450,10 +435,7 @@
               </div>
               <!-- TOS -->
               <div class="mb-3 pl-6">
-                <input
-                  type="checkbox"
-                  class="w-4 h-4 float-left -ml-6 mt-1 rounded"
-                />
+                <input type="checkbox" class="w-4 h-4 float-left -ml-6 mt-1 rounded" />
                 <label class="inline-block">Accept terms of service</label>
               </div>
               <button
