--- a/template/song.html
+++ b/template/song.html
@@ -2,19 +2,12 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <meta
-      name="viewport"
-      content="width=device-width, initial-scale=1, shrink-to-fit=no"
-    />
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
 
     <title>Music Template</title>
 
     <!-- CSS -->
     <script src="https://cdn.tailwindcss.com"></script>
-    <link
-      href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700"
-      rel="stylesheet"
-    />
     <link
       rel="stylesheet"
       href="https://use.fontawesome.com/releases/v5.3.1/css/all.css"
@@ -29,9 +22,7 @@
     <header id="header" class="bg-gray-700">
       <nav class="container mx-auto flex justify-start items-center py-5 px-4">
         <!-- App Name -->
-        <a class="text-white font-bold uppercase text-2xl mr-4" href="#"
-          >Music</a
-        >
+        <a class="text-white font-bold uppercase text-2xl mr-4" href="#">Music</a>
 
         <div class="flex flex-grow items-center">
           <!-- Primary Navigation -->
@@ -71,9 +62,7 @@
     </section>
     <!-- Form -->
     <section class="container mx-auto mt-6">
-      <div
-        class="bg-white rounded border border-gray-200 relative flex flex-col"
-      >
+      <div class="bg-white rounded border border-gray-200 relative flex flex-col">
         <div class="px-6 pt-6 pb-5 font-bold border-b border-gray-200">
           <!-- Comment Count -->
           <span class="card-title">Comments (15)</span>
@@ -85,10 +74,7 @@
               class="block w-full py-1.5 px-3 text-gray-800 border border-gray-300 transition duration-500 focus:outline-none focus:border-black rounded mb-4"
               placeholder="Your comment here..."
             ></textarea>
-            <button
-              type="submit"
-              class="py-1.5 px-3 rounded text-white bg-green-600 block"
-            >
+            <button type="submit" class="py-1.5 px-3 rounded text-white bg-green-600 block">
               Submit
             </button>
           </form>
@@ -112,8 +98,8 @@
         </div>
 
         <p>
-          Sed ut perspiciatis unde omnis iste natus error sit voluptatem
-          accusantium der doloremque laudantium.
+          Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium der doloremque
+          laudantium.
         </p>
       </li>
       <li class="p-6 bg-gray-50 border border-gray-200">
@@ -124,8 +110,8 @@
         </div>
 
         <p>
-          Sed ut perspiciatis unde omnis iste natus error sit voluptatem
-          accusantium der doloremque laudantium.
+          Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium der doloremque
+          laudantium.
         </p>
       </li>
       <li class="p-6 bg-gray-50 border border-gray-200">
@@ -136,8 +122,8 @@
         </div>
 
         <p>
-          Sed ut perspiciatis unde omnis iste natus error sit voluptatem
-          accusantium der doloremque laudantium.
+          Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium der doloremque
+          laudantium.
         </p>
       </li>
       <li class="p-6 bg-gray-50 border border-gray-200">
@@ -148,8 +134,8 @@
         </div>
 
         <p>
-          Sed ut perspiciatis unde omnis iste natus error sit voluptatem
-          accusantium der doloremque laudantium.
+          Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium der doloremque
+          laudantium.
         </p>
       </li>
       <li class="p-6 bg-gray-50 border border-gray-200">
@@ -160,8 +146,8 @@
         </div>
 
         <p>
-          Sed ut perspiciatis unde omnis iste natus error sit voluptatem
-          accusantium der doloremque laudantium.
+          Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium der doloremque
+          laudantium.
         </p>
       </li>
       <li class="p-6 bg-gray-50 border border-gray-200">
@@ -172,8 +158,8 @@
         </div>
 
         <p>
-          Sed ut perspiciatis unde omnis iste natus error sit voluptatem
-          accusantium der doloremque laudantium.
+          Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium der doloremque
+          laudantium.
         </p>
       </li>
     </ul>
@@ -195,10 +181,7 @@
         <!-- Scrub Container  -->
         <div class="w-full h-2 rounded bg-gray-200 relative cursor-pointer">
           <!-- Player Ball -->
-          <span
-            class="absolute -top-2.5 -ml-2.5 text-gray-800 text-lg"
-            style="left: 50%"
-          >
+          <span class="absolute -top-2.5 -ml-2.5 text-gray-800 text-lg" style="left: 50%">
             <i class="fas fa-circle"></i>
           </span>
           <!-- Player Progress Bar-->
